# webapp-template

./: .dependency-cruiser.cjs  .dockerignore  .env.docker.example  .env.example  .eslintignore  .gitattributes  .gitignore  .jscpd.json  .prettierignore  .prettierrc  .semgrep.yml  .semgrepignore  .template-origin.json  .terraformignore  ACTIVE_SPECS.md  AGENTS.md  AUTH_FLOWS.md  AUTH_REVIEW_CHECKLIST.md  CLAUDE.md  CONTINUE.md  CONTINUE_LOG.md  Dockerfile.app  Dockerfile.cli-builder  Dockerfile.worker  README.md  TEMPLATE_VERSION.md  audit_prompt.md  backlog.md  components.json  constitution-template.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.postgres.ts  skills-lock.json  (+4 more)
.deepsec/: README.md  deepsec.config.ts  findings-full-codex.json  highbug-manifest.json  partial-findings-revalidated.json  partial-findings.json  phase1-manifest.json  phase2-final-manifest.json  phase2-manifest.json  pnpm-lock.yaml
.githooks/: pre-commit  pre-merge-commit  pre-push  require-continuity.sh  run-validate.sh
.specify/: extensions.yml  feature.json  init-options.json
cli/: .goreleaser.yaml  README.md  go.mod  go.sum  main.go  tools.go
docs/: azure-deploy-smoke.md  best-practices-review.md  cli-user-guide.md  logging.md  mail.md  runtime-credentials.md  theme-design.md  (+2 more)
worker/: README.md  pyproject.toml
worker/src/starter_worker/: __init__.py  config.py  db.py  graph_mail.py  graph_teams.py  logging.py  main.py
worker/tests/: test_logging.py  test_main.py
(+630 files in other folders)
