[project]
name = "business-app-starter-worker"
version = "0.1.0"
description = "Background worker for Business App Starter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.0,<4",
]

[project.scripts]
starter-worker = "starter_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starter_worker"]
