[project]
name = "business-app-starter-worker"
version = "0.1.0"
description = "Background worker for Business App Starter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.1.1,<2",
  "psycopg[binary]>=3.2.0,<4",
]

[project.scripts]
starter-worker = "starter_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "1 week"

[tool.hatch.build.targets.wheel]
packages = ["src/starter_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "complexipy>=5.3.0",
    "radon>=6.0.1",
    "ruff>=0.15.11",
    "xenon>=0.9.3",
]
